# nb_agent

./: .gitignore  AGENTS.md  README.md  config.example.jsonc  nb_agent_all_docs_and_codes.md  nb_agent_config_jsonc_abount.md  nb_log_config.py  plan3.md  pub_pypi_nb_agent.py  pyproject.toml
.cursor/skills/python-type-hints-docstring/: SKILL.md
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
examples/demo2/: README.md  run.py  run_verbose.py
examples/demo2/mcp_servers/: bookmark_server.py
examples/demo2/notes/: 20260527_190459_Celery 最简单 Demo - run_py_调用任务_.md  20260527_190459_Celery 最简单 Demo - tasks_py.md
examples/demo2/notes_data/: 20260527_190459_Celery 最简单 Demo - celery_app_py.md
examples/demo2/tools/: note_tools.py  project_tools.py
nb_agent/: __init__.py  __main__.py  main.py
nb_agent/approval/: __init__.py  engine.py
nb_agent/config/: __init__.py  loader.py
nb_agent/core/: __init__.py  agent.py  context.py  models.py  retry.py
nb_agent/mcp/: __init__.py  client.py
nb_agent/session/: __init__.py  models.py  store.py
nb_agent/skills/: README.md  __init__.py  manager.py
nb_agent/tools/: __init__.py  base.py  builtin.py
nb_agent/tui/: app.py  styles.tcss
nb_agent/utils/: loggers.py
tests/: test_config.py  test_session.py  test_session_quick.py  test_skills.py  test_skills_integration.py  test_skills_quick.py  test_tools.py
tests/ai_codes/: fix_db_null.py  rebuild_db.py  test_redirect.py
tests/ai_docs/: ai_update.md
tests/my_tests/: 启动tui.md
(+18 files in other folders)
