[project]
name = "nb_agent"
version = "0.2.0"
description = "Handwritten ReAct Agent with TUI — Tools + MCP + Skills"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["ai-agent", "react-agent", "function-calling", "mcp", "tui", "skills"]

dependencies = [
    "textual>=0.50.0",
    "rich>=13.0.0",
    "json5>=0.9.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "sqlmodel>=0.0.16",
    "nb_log",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.20"]

[project.scripts]
nb_agent = "nb_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
